--- a/lecture/introduction.Rmd
+++ b/lecture/introduction.Rmd
@@ -23,7 +23,7 @@ for (pkg in required_packages) {
   }
   library(pkg, character.only = TRUE)
 }
-source("../R/colors.R")
+source(file.path("..", "R", "colors.R"))
 ```
 
 # What's wrong with Statistics
