Explain right arith shift necessary for signed int division

--- a/lecture/hardware_aware_computing.Rmd
+++ b/lecture/hardware_aware_computing.Rmd
@@ -289,6 +289,7 @@ To foster mutual understanding between us and machine, let's look at simple _ass
 --
 .pull-right[
   "shr" = _logical shift_ to right
+  
   <img src="figure/computing_at_low_level/right_logical_shift.png" class="center" style="width: 100%;"/>
 ]
 
@@ -298,9 +299,20 @@ To foster mutual understanding between us and machine, let's look at simple _ass
 .pull-left[
   <img src="figure/computing_at_low_level/divide_int_by_two_assembly_only.png" class="left" style="width: 100%;"/> 
 ]
---
 .pull-right[
   <img src="figure/computing_at_low_level/twos_complement_representation_of_integer.png" class="center" style="width: 100%;"/>
+]
+
+---
+
+# Division via bit-shift
+.pull-left[
+  <img src="figure/computing_at_low_level/divide_int_by_two_assembly_only.png" class="left" style="width: 100%;"/> 
+]
+.pull-right[
+  "sar" = _arith. shift_ to right
+  
+  <img src="figure/computing_at_low_level/right_arithmetic_shift.png" class="center" style="width: 100%;"/>
 ]
 <!-- https://stackoverflow.com/questions/40638335/why-does-the-compiler-generate-a-right-shift-by-31-bits-when-dividing-by-2 -->
 
