User-defined remark.js macros

--- a/lecture/hardware_aware_computing.Rmd
+++ b/lecture/hardware_aware_computing.Rmd
@@ -11,6 +11,7 @@ output:
       highlightStyle: github
       slideNumberFormat: "%current%"
       countIncrementalSlides: false
+      beforeInit: "macros.js"
     includes:
       before_body: mathjax_config.html
 ---
